[package]
name = "kv-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.8"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "io-utils",
  "macros",
] }
anyhow = "1"
async-prost = "0.2.1"
futures = "0.3"

[build-dependencies]
prost-build = "0.8"
